<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_scale"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple1" />
    <!--    android:src="@drawable/apple1"-->


    <Button
        android:id="@+id/btn_fitCenter"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/btn_fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/btn_center"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_centerCrop"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_centerCrop"
        app:layout_constraintStart_toEndOf="@+id/btn_fitCenter"
        app:layout_constraintTop_toTopOf="@+id/btn_fitCenter" />

    <Button
        android:id="@+id/btn_centerInside"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_centerCrop"
        app:layout_constraintTop_toTopOf="@+id/btn_centerCrop" />

    <Button
        android:id="@+id/btn_center"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/btn_center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_fitXY"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_fitXY"
        app:layout_constraintStart_toEndOf="@+id/btn_center"
        app:layout_constraintTop_toTopOf="@+id/btn_center" />

    <Button
        android:id="@+id/btn_fitStart"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_fitStart"
        app:layout_constraintStart_toEndOf="@+id/btn_fitXY"
        app:layout_constraintTop_toTopOf="@+id/btn_fitXY" />

    <Button
        android:id="@+id/btn_fitEnd"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_fitStart"
        app:layout_constraintTop_toTopOf="@+id/btn_fitStart" />

</androidx.constraintlayout.widget.ConstraintLayout>